--- a/offline.html
+++ b/offline.html
@@ -137,8 +137,8 @@
                     </div>
                     <p class="text-sm md:text-base desc p-2 mb-4">You aren't connected to a working internet
                         connection</p>
-                    <a href="/"
-                        class=" Retry">
+                    <a href="https://devayham.github.io/Trip-Tips-App/#/home"
+                        class="retry">
                         Retry</a>
                 </div>
             </div>
