--- a/offline.html
+++ b/offline.html
@@ -10,39 +10,54 @@
             }
             body {
                 height: 100%;
+                width: 100%;
+                overflow: hidden;
                 margin: 0;
                 background: #0a1f44;
                 display: flex;
                 align-items: center;
                 text-align: center;
                 justify-content: center;
+            }
+            .container{
+                width: 95%;
+                height: 95%;
                 display: flex;
                 justify-content: center;
                 align-items: center;
+                margin: 5%;
+            }
+            .svg{
+                width: 100%;
+                
+            }
+            svg{
+                width: 100% !important;
             }
             .desc{
+                text-align: center;
+                width: 80%;
                 font-size: 20px;
                 color: #ffc831;
             }
             .retry{
                 text-decoration: none;
                 border: 1px solid white;
-                padding: 6px 8px;
+                padding: 8px;
                 border-radius: 5px;
                 transition: all 500ms;
                 color: white;
+                font-size: 25px;
             }
             .retry:hover{
-                color: #ffc831;
+                color: #0a1f44;
                 background: #ffc831;
             }
         </style>
     </head>
     <body>
-        <div class=" text-white">
-            <div class="flex h-screen">
-                <div class="m-auto text-center">
-                    <div>
+            <div class="container">
+                    <div class="svg">
                         <svg width="450" height="338" viewBox="0 0 450 338" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <g clip-path="url(#clip0)">
                                 <path
@@ -140,8 +155,6 @@
                     <a href="https://devayham.github.io/Trip-Tips-App/#/home"
                         class="retry">
                         Retry</a>
-                </div>
             </div>
-        </div>
     </body>
 </html>
