--- a/offline.html
+++ b/offline.html
@@ -25,6 +25,7 @@
                 display: flex;
                 justify-content: center;
                 align-items: center;
+                flex-direction: column;
                 margin: 5%;
             }
             .svg{
@@ -150,8 +151,7 @@
                             </defs>
                         </svg>
                     </div>
-                    <p class="text-sm md:text-base desc p-2 mb-4">You aren't connected to a working internet
-                        connection</p>
+                    <p class="text-sm md:text-base desc p-2 mb-4">Sorry.. <br/>It Looks You Aren't Connected to the internet.<br> Try Again when Your Connection is restored</p>
                     <a href="https://devayham.github.io/Trip-Tips-App/#/home"
                         class="retry">
                         Retry</a>
