--- a/offline.html
+++ b/offline.html
@@ -152,7 +152,7 @@
                         </svg>
                     </div>
                     <p class="text-sm md:text-base desc p-2 mb-4">Sorry.. <br/>It Looks You Aren't Connected to the internet.<br> Try Again when Your Connection is restored</p>
-                    <a href="https://devayham.github.io/Trip-Tips-App/#/home"
+                    <a href="https://devayham.github.io/Trip-Tips-App/"
                         class="retry">
                         Retry</a>
             </div>
